# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: gendiff-tests.yml
.github/workflows/: gendiff-lint.yml  gendiff-tests.yml
gendiff/: __init.py__  __init__.py  gendiff.py
gendiff/formatters/: f_plain.py  json.py  plain.py  stylish.py
gendiff/scripts/: comparator.py  formatter.py  gendiff.py  generate_diff.py
gendiff/text_parsers/: comparator.py  formatter_json.py  formatter_plain.py  formatter_stylish.py  str_bool_lower.py
gendiff/utils/: cli.py  comparator.py  formatting.py  generate_diff.py  read_data.py
tests/: conftest.py  test_gendiff.py
tests/fixtures/: fail_stylish  file1.json  file1.yaml  long_json_pass  pass_json  plain_check_fail  short_check_fail_equal_key
tests/fixtures/examples/: file2.json
